# public/docs/openapi.yaml
@@ -9,7 +9,7 @@ servers:
 paths:
   '/api/profiles/{id}':
     get:
-      summary: 'show Profile'
+      summary: 'Show Profile'
       operationId: showProfile
       description: ''
       parameters: []
@@ -38,7 +38,7 @@ paths:
       tags:
         - 'Profile Management'
       requestBody:
-        required: true
+        required: false
         content:
           application/json:
             schema:
@@ -46,73 +46,67 @@ paths:
               properties:
                 name:
                   type: string
-                  description: 'Must not be greater than 100 characters.'
-                  example: yqewrxbbwmhrggykbcssmeii
+                  description: 'The name of the user.'
+                  example: dolorem
                 mobile:
                   type: string
-                  description: 'Must match the regex /^\+91[1-9][0-9]{9}$/.'
-                  example: '+919651392996'
+                  description: 'The mobile number of the user.'
+                  example: ipsum
                 pan:
                   type: string
-                  description: 'Must match the regex /^([a-zA-Z]){5}([0-9]){4}([a-zA-Z0-9]){1}?$/.'
-                  example: ehMjL7666(b
+                  description: 'The pan number of the user.'
+                  example: quam
                 address_1:
                   type: string
-                  description: 'Must not be greater than 100 characters.'
-                  example: aoevphbfjaffui
+                  description: 'The address_1 of the user.'
+                  example: velit
                 address_2:
                   type: string
-                  description: 'Must not be greater than 100 characters.'
-                  example: dceitfbiwxknb
+                  description: 'The address_1 of the user.'
+                  example: minima
                 city:
                   type: string
-                  description: 'Must not be greater than 100 characters.'
-                  example: yf
+                  description: 'The city of the user.'
+                  example: veniam
                 state:
                   type: string
-                  description: 'Must not be greater than 100 characters.'
-                  example: petckjn
+                  description: 'The state of the user.'
+                  example: corporis
                 pincode:
                   type: string
-                  description: 'Must match the regex /^[1-9][0-9]{2}\s{0,1}[0-9]{3}$/.'
-                  example: 564s308
+                  description: 'The pincode of the user.'
+                  example: quisquam
                 bank_name:
                   type: string
-                  description: 'Must not be greater than 100 characters.'
-                  example: cewqvfi
+                  description: 'The bank name of the user.'
+                  example: sapiente
                 account_name:
                   type: string
-                  description: 'Must not be greater than 100 characters.'
-                  example: oxmagry
+                  description: 'The account name of the user.'
+                  example: consequatur
                 account_no:
                   type: string
-                  description: 'Must not be greater than 20 characters.'
-                  example: wxeqaixz
+                  description: 'The account number of the user.'
+                  example: nobis
                 ifsc:
                   type: string
-                  description: 'Must match the regex /^[A-Z]{4}0[A-Z0-9]{6}$/.'
-                  example: GMNY0SFLDH7
+                  description: 'The ifsc number of the user.'
+                  example: praesentium
                 business_name:
                   type: string
-                  description: 'Must not be greater than 100 characters.'
-                  example: oddt
+                  description: 'The business_name of the user.'
+                  example: et
                 gstin:
                   type: string
-                  description: 'Must not be greater than 15 characters.'
-                  example: zbvywhjkhblj
-              required:
-                - name
-                - mobile
-                - pan
-                - pincode
-                - ifsc
+                  description: 'The gstin of the user.'
+                  example: debitis
       security: []
     parameters:
       -
         in: path
         name: id
         description: 'The ID of the profile.'
-        example: non
+        example: rerum
         required: true
         schema:
           type: string
@@ -135,27 +129,35 @@ paths:
                 name:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: p
+                  example: amctcqbldsnfeftgdeuidpnio
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: van.padberg@example.com
+                  example: ricardo.kirlin@example.net
                 mobile:
                   type: string
                   description: 'Must match the regex /^\+(?:\d{1}.'
-                  example: '+(:9'
+                  example: '+(:8'
                 pan:
                   type: string
                   description: 'Must match the regex /^([a-zA-Z]){5}([0-9]){4}([a-zA-Z0-9]){1}?$/.'
-                  example: MScSo3314R
+                  example: bHWXh2797T
                 password:
                   type: string
                   description: 'Must be at least 6 characters.'
-                  example: 'Ru:+^"'
+                  example: '>DM*(k=C_'
                 password_confirmation:
                   type: string
                   description: ''
-                  example: necessitatibus
+                  example: qui
+                parent_id:
+                  type: string
+                  description: ''
+                  example: quia
+                ref_id:
+                  type: string
+                  description: ''
+                  example: quia
               required:
                 - name
                 - email
@@ -163,6 +165,8 @@ paths:
                 - pan
                 - password
                 - password_confirmation
+                - parent_id
+                - ref_id
       security: []
   /api/login:
     post:
@@ -183,11 +187,11 @@ paths:
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: grobel@example.net
+                  example: igrady@example.net
                 password:
                   type: string
                   description: 'Must be at least 6 characters.'
-                  example: '}w,-glc-l8'
+                  example: ',18}^#w'
               required:
                 - email
                 - password
@@ -221,15 +225,15 @@ paths:
                 user_id:
                   type: integer
                   description: 'This is logged in user_id'
-                  example: 13
+                  example: 5
                 amount:
                   type: decimal
                   description: 'Amount paid by User'
-                  example: sint
+                  example: amet
                 email:
                   type: string
                   description: "email User's valid Email"
-                  example: dicki.rubye@example.org
+                  example: billy92@example.net
               required:
                 - user_id
                 - email
